--- a/web_clothes.csproj
+++ b/web_clothes.csproj
@@ -131,6 +131,31 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\hinh-pro\logo.jpg" />
+    <Content Include="Content\hinh-pro\pro_1.jpg" />
+    <Content Include="Content\hinh-pro\pro_10.jpg" />
+    <Content Include="Content\hinh-pro\pro_11.jpg" />
+    <Content Include="Content\hinh-pro\pro_12.jpg" />
+    <Content Include="Content\hinh-pro\pro_13.jpg" />
+    <Content Include="Content\hinh-pro\pro_14.jpg" />
+    <Content Include="Content\hinh-pro\pro_15.jpg" />
+    <Content Include="Content\hinh-pro\pro_16.jpg" />
+    <Content Include="Content\hinh-pro\pro_17.jpg" />
+    <Content Include="Content\hinh-pro\pro_18.jpg" />
+    <Content Include="Content\hinh-pro\pro_19.jpg" />
+    <Content Include="Content\hinh-pro\pro_2.jpg" />
+    <Content Include="Content\hinh-pro\pro_20.jpg" />
+    <Content Include="Content\hinh-pro\pro_21.jpg" />
+    <Content Include="Content\hinh-pro\pro_22.jpg" />
+    <Content Include="Content\hinh-pro\pro_23.jpg" />
+    <Content Include="Content\hinh-pro\pro_24.jpg" />
+    <Content Include="Content\hinh-pro\pro_3.jpg" />
+    <Content Include="Content\hinh-pro\pro_4.jpg" />
+    <Content Include="Content\hinh-pro\pro_5.jpg" />
+    <Content Include="Content\hinh-pro\pro_6.jpg" />
+    <Content Include="Content\hinh-pro\pro_7.jpg" />
+    <Content Include="Content\hinh-pro\pro_8.jpg" />
+    <Content Include="Content\hinh-pro\pro_9.jpg" />
     <Content Include="Content\web_clothes.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
