--- a/web_clothes.csproj
+++ b/web_clothes.csproj
@@ -215,8 +215,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\web-clothes.cshtml" />
-    <Content Include="Views\Shared\web_clothes_view.cshtml" />
-    <Content Include="Views\Home\web_clothes.cshtml" />
+    <Content Include="Views\Home\web_clothes_view.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
