--- a/web_clothes.csproj
+++ b/web_clothes.csproj
@@ -216,6 +216,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\web-clothes.cshtml" />
     <Content Include="Views\Home\web_clothes_view.cshtml" />
+    <Content Include="Views\Home\dieu_khoan.cshtml" />
+    <Content Include="Views\Home\dieu_khoan_view.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
