--- a/web_clothes.csproj
+++ b/web_clothes.csproj
@@ -217,7 +217,8 @@
     <Content Include="Views\Home\dieu_khoan_view.cshtml" />
     <Content Include="Views\Home\huong_dan_mua_hang.cshtml" />
     <Content Include="Views\Home\huong_dan_mua_hang_view.cshtml" />
-    <Content Include="Views\Home\see-all.cshtml" />
+    <Content Include="Views\Home\see_all.cshtml" />
+    <Content Include="Views\Home\see_all_view.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
