--- a/web_clothes.csproj
+++ b/web_clothes.csproj
@@ -134,10 +134,26 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap-theme.css" />
-    <Content Include="Content\bootstrap-theme.min.css" />
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap-grid.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap-grid.min.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap-grid.rtl.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap-grid.rtl.min.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap-reboot.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap-reboot.min.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap-reboot.rtl.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap-reboot.rtl.min.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap-utilities.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap-utilities.min.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap-utilities.rtl.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap-utilities.rtl.min.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap.min.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap.rtl.css" />
+    <Content Include="Content\Content_Boostrap\bootstrap.rtl.min.css" />
+    <Content Include="Content\Content_Main\bootstrap-theme.css" />
+    <Content Include="Content\Content_Main\bootstrap-theme.min.css" />
+    <Content Include="Content\Content_Main\bootstrap.css" />
+    <Content Include="Content\Content_Main\bootstrap.min.css" />
     <Content Include="Content\hinh-pro\logo.jpg" />
     <Content Include="Content\hinh-pro\pro_1.jpg" />
     <Content Include="Content\hinh-pro\pro_10.jpg" />
@@ -167,7 +183,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\Content_Main\Site.css" />
     <Content Include="hinh-pro\logo.jpg" />
     <Content Include="hinh-pro\pro_1.jpg" />
     <Content Include="hinh-pro\pro_10.jpg" />
@@ -193,19 +209,41 @@
     <Content Include="hinh-pro\pro_7.jpg" />
     <Content Include="hinh-pro\pro_8.jpg" />
     <Content Include="hinh-pro\pro_9.jpg" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
-    <None Include="Scripts\jquery-3.4.1.intellisense.js" />
-    <Content Include="Scripts\jquery-3.4.1.js" />
-    <Content Include="Scripts\jquery-3.4.1.min.js" />
-    <Content Include="Scripts\jquery-3.4.1.slim.js" />
-    <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\Scripts_Main\bootstrap.js" />
+    <Content Include="Scripts\Scripts_Main\bootstrap.min.js" />
+    <Content Include="Content\Content_Boostrap\bootstrap-grid.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-grid.min.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-grid.rtl.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-grid.rtl.min.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-reboot.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-reboot.min.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-reboot.rtl.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-reboot.rtl.min.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-utilities.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-utilities.min.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-utilities.rtl.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-utilities.rtl.min.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap.min.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap.rtl.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap.rtl.min.css.map" />
+    <None Include="Scripts\Scripts_Main\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\Scripts_Main\jquery-3.4.1.js" />
+    <Content Include="Scripts\Scripts_Main\jquery-3.4.1.min.js" />
+    <Content Include="Scripts\Scripts_Main\jquery-3.4.1.slim.js" />
+    <Content Include="Scripts\Scripts_Main\jquery-3.4.1.slim.min.js" />
+    <None Include="Scripts\Scripts_Main\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\Scripts_Main\jquery.validate.js" />
+    <Content Include="Scripts\Scripts_Main\jquery.validate.min.js" />
+    <Content Include="Scripts\Scripts_Main\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\Scripts_Main\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\Scripts_Main\modernizr-2.8.3.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.bundle.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.bundle.min.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.esm.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.esm.min.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.min.js" />
     <Content Include="Scripts\web_clothes.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -226,6 +264,12 @@
     <Content Include="Views\Home\huong_dan_mua_hang_view.cshtml" />
     <Content Include="Views\Home\see_all.cshtml" />
     <Content Include="Views\Home\see_all_view.cshtml" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.bundle.js.map" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.bundle.min.js.map" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.esm.js.map" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.esm.min.js.map" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.js.map" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.min.js.map" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -236,13 +280,13 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="Content\bootstrap.min.css.map" />
-    <Content Include="Content\bootstrap.css.map" />
-    <Content Include="Content\bootstrap-theme.min.css.map" />
-    <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Content\Content_Main\bootstrap.min.css.map" />
+    <Content Include="Content\Content_Main\bootstrap.css.map" />
+    <Content Include="Content\Content_Main\bootstrap-theme.min.css.map" />
+    <Content Include="Content\Content_Main\bootstrap-theme.css.map" />
     <None Include="packages.config" />
-    <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
-    <Content Include="Scripts\jquery-3.4.1.min.map" />
+    <Content Include="Scripts\Scripts_Main\jquery-3.4.1.slim.min.map" />
+    <Content Include="Scripts\Scripts_Main\jquery-3.4.1.min.map" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
