--- a/web_clothes.csproj
+++ b/web_clothes.csproj
@@ -270,6 +270,8 @@
     <Content Include="Scripts\Sctipts_Boostrap\bootstrap.esm.min.js.map" />
     <Content Include="Scripts\Sctipts_Boostrap\bootstrap.js.map" />
     <Content Include="Scripts\Sctipts_Boostrap\bootstrap.min.js.map" />
+    <Content Include="Views\Home\chinh_sach_doi_tra.cshtml" />
+    <Content Include="Views\Home\chinh_sach_doi_tra_view.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
