--- a/bin/do_an_web.dll.config
+++ b/bin/do_an_web.dll.config
@@ -65,4 +65,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="webClothesEntities" connectionString="metadata=res://*/Models.webClothesModel.csdl|res://*/Models.webClothesModel.ssdl|res://*/Models.webClothesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MSI\SQLEXPRESS;initial catalog=webClothes;user id=hoangtran;password=Hoangtran2003@@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
