--- a/web_clothes.csproj
+++ b/web_clothes.csproj
@@ -346,6 +346,8 @@
     <Content Include="Views\Home\login_view.cshtml" />
     <Content Include="Views\Home\chinh_sach_bao_mat_thong_tin.cshtml" />
     <Content Include="Views\Home\chinh_sach_bao_mat_thong_tin_view.cshtml" />
+    <Content Include="Views\Home\chinh_sach_thanh_toan.cshtml" />
+    <Content Include="Views\Home\chinh_sach_thanh_toan_view.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
