--- a/web_clothes.csproj
+++ b/web_clothes.csproj
@@ -326,28 +326,28 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\web-clothes.cshtml" />
-    <Content Include="Views\Home\web_clothes_view.cshtml" />
-    <Content Include="Views\Home\dieu_khoan.cshtml" />
-    <Content Include="Views\Home\dieu_khoan_view.cshtml" />
-    <Content Include="Views\Home\huong_dan_mua_hang.cshtml" />
-    <Content Include="Views\Home\huong_dan_mua_hang_view.cshtml" />
-    <Content Include="Views\Home\see_all.cshtml" />
-    <Content Include="Views\Home\see_all_view.cshtml" />
+    <Content Include="Views\Home\Main\web-clothes.cshtml" />
+    <Content Include="Views\Home\View\web_clothes_view.cshtml" />
+    <Content Include="Views\Home\Main\dieu_khoan.cshtml" />
+    <Content Include="Views\Home\View\dieu_khoan_view.cshtml" />
+    <Content Include="Views\Home\Main\huong_dan_mua_hang.cshtml" />
+    <Content Include="Views\Home\View\huong_dan_mua_hang_view.cshtml" />
+    <Content Include="Views\Home\Main\see_all.cshtml" />
+    <Content Include="Views\Home\View\see_all_view.cshtml" />
     <Content Include="Scripts\Sctipts_Boostrap\bootstrap.bundle.js.map" />
     <Content Include="Scripts\Sctipts_Boostrap\bootstrap.bundle.min.js.map" />
     <Content Include="Scripts\Sctipts_Boostrap\bootstrap.esm.js.map" />
     <Content Include="Scripts\Sctipts_Boostrap\bootstrap.esm.min.js.map" />
     <Content Include="Scripts\Sctipts_Boostrap\bootstrap.js.map" />
     <Content Include="Scripts\Sctipts_Boostrap\bootstrap.min.js.map" />
-    <Content Include="Views\Home\chinh_sach_doi_tra.cshtml" />
-    <Content Include="Views\Home\chinh_sach_doi_tra_view.cshtml" />
-    <Content Include="Views\Home\login.cshtml" />
-    <Content Include="Views\Home\login_view.cshtml" />
-    <Content Include="Views\Home\chinh_sach_bao_mat_thong_tin.cshtml" />
-    <Content Include="Views\Home\chinh_sach_bao_mat_thong_tin_view.cshtml" />
-    <Content Include="Views\Home\chinh_sach_thanh_toan.cshtml" />
-    <Content Include="Views\Home\chinh_sach_thanh_toan_view.cshtml" />
+    <Content Include="Views\Home\Main\chinh_sach_doi_tra.cshtml" />
+    <Content Include="Views\Home\View\chinh_sach_doi_tra_view.cshtml" />
+    <Content Include="Views\Home\Main\login.cshtml" />
+    <Content Include="Views\Home\View\login_view.cshtml" />
+    <Content Include="Views\Home\Main\chinh_sach_bao_mat_thong_tin.cshtml" />
+    <Content Include="Views\Home\View\chinh_sach_bao_mat_thong_tin_view.cshtml" />
+    <Content Include="Views\Home\Main\chinh_sach_thanh_toan.cshtml" />
+    <Content Include="Views\Home\View\chinh_sach_thanh_toan_view.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
