--- a/web_clothes.csproj
+++ b/web_clothes.csproj
@@ -380,56 +380,56 @@
     <Content Include="Scripts\Sctipts_Boostrap\bootstrap.min.js.map" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\web_clothes_view.cshtml" />
-    <Content Include="Views\brands\Create.cshtml" />
-    <Content Include="Views\brands\Delete.cshtml" />
-    <Content Include="Views\brands\Details.cshtml" />
-    <Content Include="Views\brands\Edit.cshtml" />
-    <Content Include="Views\brands\Index.cshtml" />
-    <Content Include="Views\carts\Create.cshtml" />
-    <Content Include="Views\carts\Delete.cshtml" />
-    <Content Include="Views\carts\Details.cshtml" />
-    <Content Include="Views\carts\Edit.cshtml" />
-    <Content Include="Views\carts\Index.cshtml" />
-    <Content Include="Views\categories\Create.cshtml" />
-    <Content Include="Views\categories\Delete.cshtml" />
-    <Content Include="Views\categories\Details.cshtml" />
-    <Content Include="Views\categories\Edit.cshtml" />
-    <Content Include="Views\categories\Index.cshtml" />
-    <Content Include="Views\constracts\Create.cshtml" />
-    <Content Include="Views\constracts\Delete.cshtml" />
-    <Content Include="Views\constracts\Details.cshtml" />
-    <Content Include="Views\constracts\Edit.cshtml" />
-    <Content Include="Views\constracts\Index.cshtml" />
-    <Content Include="Views\customers\Create.cshtml" />
-    <Content Include="Views\customers\Delete.cshtml" />
-    <Content Include="Views\customers\Details.cshtml" />
-    <Content Include="Views\customers\Edit.cshtml" />
-    <Content Include="Views\customers\Index.cshtml" />
-    <Content Include="Views\customer_order\Create.cshtml" />
-    <Content Include="Views\customer_order\Delete.cshtml" />
-    <Content Include="Views\customer_order\Details.cshtml" />
-    <Content Include="Views\customer_order\Edit.cshtml" />
-    <Content Include="Views\customer_order\Index.cshtml" />
-    <Content Include="Views\partners\Create.cshtml" />
-    <Content Include="Views\partners\Delete.cshtml" />
-    <Content Include="Views\partners\Details.cshtml" />
-    <Content Include="Views\partners\Edit.cshtml" />
-    <Content Include="Views\partners\Index.cshtml" />
-    <Content Include="Views\products\Create.cshtml" />
-    <Content Include="Views\products\Delete.cshtml" />
-    <Content Include="Views\products\Details.cshtml" />
-    <Content Include="Views\products\Edit.cshtml" />
-    <Content Include="Views\products\Index.cshtml" />
-    <Content Include="Views\reports\Create.cshtml" />
-    <Content Include="Views\reports\Delete.cshtml" />
-    <Content Include="Views\reports\Details.cshtml" />
-    <Content Include="Views\reports\Edit.cshtml" />
-    <Content Include="Views\reports\Index.cshtml" />
-    <Content Include="Views\warehouses\Create.cshtml" />
-    <Content Include="Views\warehouses\Delete.cshtml" />
-    <Content Include="Views\warehouses\Details.cshtml" />
-    <Content Include="Views\warehouses\Edit.cshtml" />
-    <Content Include="Views\warehouses\Index.cshtml" />
+    <Content Include="Views\Index-Controller\brands\Create.cshtml" />
+    <Content Include="Views\Index-Controller\brands\Delete.cshtml" />
+    <Content Include="Views\Index-Controller\brands\Details.cshtml" />
+    <Content Include="Views\Index-Controller\brands\Edit.cshtml" />
+    <Content Include="Views\Index-Controller\brands\Index.cshtml" />
+    <Content Include="Views\Index-Controller\carts\Create.cshtml" />
+    <Content Include="Views\Index-Controller\carts\Delete.cshtml" />
+    <Content Include="Views\Index-Controller\carts\Details.cshtml" />
+    <Content Include="Views\Index-Controller\carts\Edit.cshtml" />
+    <Content Include="Views\Index-Controller\carts\Index.cshtml" />
+    <Content Include="Views\Index-Controller\categories\Create.cshtml" />
+    <Content Include="Views\Index-Controller\categories\Delete.cshtml" />
+    <Content Include="Views\Index-Controller\categories\Details.cshtml" />
+    <Content Include="Views\Index-Controller\categories\Edit.cshtml" />
+    <Content Include="Views\Index-Controller\categories\Index.cshtml" />
+    <Content Include="Views\Index-Controller\constracts\Create.cshtml" />
+    <Content Include="Views\Index-Controller\constracts\Delete.cshtml" />
+    <Content Include="Views\Index-Controller\constracts\Details.cshtml" />
+    <Content Include="Views\Index-Controller\constracts\Edit.cshtml" />
+    <Content Include="Views\Index-Controller\constracts\Index.cshtml" />
+    <Content Include="Views\Index-Controller\customers\Create.cshtml" />
+    <Content Include="Views\Index-Controller\customers\Delete.cshtml" />
+    <Content Include="Views\Index-Controller\customers\Details.cshtml" />
+    <Content Include="Views\Index-Controller\customers\Edit.cshtml" />
+    <Content Include="Views\Index-Controller\customers\Index.cshtml" />
+    <Content Include="Views\Index-Controller\customer_order\Create.cshtml" />
+    <Content Include="Views\Index-Controller\customer_order\Delete.cshtml" />
+    <Content Include="Views\Index-Controller\customer_order\Details.cshtml" />
+    <Content Include="Views\Index-Controller\customer_order\Edit.cshtml" />
+    <Content Include="Views\Index-Controller\customer_order\Index.cshtml" />
+    <Content Include="Views\Index-Controller\partners\Create.cshtml" />
+    <Content Include="Views\Index-Controller\partners\Delete.cshtml" />
+    <Content Include="Views\Index-Controller\partners\Details.cshtml" />
+    <Content Include="Views\Index-Controller\partners\Edit.cshtml" />
+    <Content Include="Views\Index-Controller\partners\Index.cshtml" />
+    <Content Include="Views\Index-Controller\products\Create.cshtml" />
+    <Content Include="Views\Index-Controller\products\Delete.cshtml" />
+    <Content Include="Views\Index-Controller\products\Details.cshtml" />
+    <Content Include="Views\Index-Controller\products\Edit.cshtml" />
+    <Content Include="Views\Index-Controller\products\Index.cshtml" />
+    <Content Include="Views\Index-Controller\reports\Create.cshtml" />
+    <Content Include="Views\Index-Controller\reports\Delete.cshtml" />
+    <Content Include="Views\Index-Controller\reports\Details.cshtml" />
+    <Content Include="Views\Index-Controller\reports\Edit.cshtml" />
+    <Content Include="Views\Index-Controller\reports\Index.cshtml" />
+    <Content Include="Views\Index-Controller\warehouses\Create.cshtml" />
+    <Content Include="Views\Index-Controller\warehouses\Delete.cshtml" />
+    <Content Include="Views\Index-Controller\warehouses\Details.cshtml" />
+    <Content Include="Views\Index-Controller\warehouses\Edit.cshtml" />
+    <Content Include="Views\Index-Controller\warehouses\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
