--- a/web_clothes.csproj
+++ b/web_clothes.csproj
@@ -142,7 +142,7 @@
     <Compile Include="Areas\admin\Controllers\customersController.cs" />
     <Compile Include="Areas\admin\Controllers\customer_orderController.cs" />
     <Compile Include="Areas\admin\Controllers\partnersController.cs" />
-    <Compile Include="Areas\admin\Controllers\productsController.cs" />
+    <Compile Include="Areas\admin\Controllers\productController.cs" />
     <Compile Include="Areas\admin\Controllers\reportsController.cs" />
     <Compile Include="Areas\admin\Controllers\warehousesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -293,11 +293,11 @@
       <DependentUpon>webClothesModels.edmx</DependentUpon>
     </Content>
     <Content Include="Areas\admin\Views\web.config" />
-    <Content Include="Areas\admin\Views\products\Create.cshtml" />
-    <Content Include="Areas\admin\Views\products\Delete.cshtml" />
-    <Content Include="Areas\admin\Views\products\Details.cshtml" />
-    <Content Include="Areas\admin\Views\products\Edit.cshtml" />
-    <Content Include="Areas\admin\Views\products\Index.cshtml" />
+    <Content Include="Areas\admin\Views\product\Create.cshtml" />
+    <Content Include="Areas\admin\Views\product\Delete.cshtml" />
+    <Content Include="Areas\admin\Views\product\Details.cshtml" />
+    <Content Include="Areas\admin\Views\product\Edit.cshtml" />
+    <Content Include="Areas\admin\Views\product\Index.cshtml" />
     <Content Include="Areas\admin\Views\brands\Create.cshtml" />
     <Content Include="Areas\admin\Views\brands\Delete.cshtml" />
     <Content Include="Areas\admin\Views\brands\Details.cshtml" />
