--- a/web_clothes.csproj
+++ b/web_clothes.csproj
@@ -252,22 +252,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap-grid.css" />
-    <Content Include="Content\bootstrap-grid.min.css" />
-    <Content Include="Content\bootstrap-grid.rtl.css" />
-    <Content Include="Content\bootstrap-grid.rtl.min.css" />
-    <Content Include="Content\bootstrap-reboot.css" />
-    <Content Include="Content\bootstrap-reboot.min.css" />
-    <Content Include="Content\bootstrap-reboot.rtl.css" />
-    <Content Include="Content\bootstrap-reboot.rtl.min.css" />
-    <Content Include="Content\bootstrap-utilities.css" />
-    <Content Include="Content\bootstrap-utilities.min.css" />
-    <Content Include="Content\bootstrap-utilities.rtl.css" />
-    <Content Include="Content\bootstrap-utilities.rtl.min.css" />
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\bootstrap.rtl.css" />
-    <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\Content_Boostrap\bootstrap-grid.css" />
     <Content Include="Content\Content_Boostrap\bootstrap-grid.min.css" />
     <Content Include="Content\Content_Boostrap\bootstrap-grid.rtl.css" />
@@ -335,40 +319,24 @@
       <DependentUpon>webClothesModels.edmx</DependentUpon>
       <LastGenOutput>webClothesModels.cs</LastGenOutput>
     </Content>
-    <Content Include="Scripts\bootstrap.bundle.js" />
-    <Content Include="Scripts\bootstrap.bundle.min.js" />
-    <Content Include="Scripts\bootstrap.esm.js" />
-    <Content Include="Scripts\bootstrap.esm.min.js" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
-    <None Include="Scripts\jquery-3.6.1.intellisense.js" />
-    <Content Include="Scripts\jquery-3.6.1.js" />
-    <Content Include="Scripts\jquery-3.6.1.min.js" />
-    <Content Include="Scripts\jquery-3.6.1.slim.js" />
-    <Content Include="Scripts\jquery-3.6.1.slim.min.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.bundle.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.bundle.min.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.esm.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.esm.min.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.min.js" />
+    <None Include="Scripts\Sctipts_Boostrap\jquery-3.6.1.intellisense.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\jquery-3.6.1.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\jquery-3.6.1.min.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\jquery-3.6.1.slim.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\jquery-3.6.1.slim.min.js" />
+    <None Include="Scripts\Sctipts_Boostrap\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\jquery.validate.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\jquery.validate.min.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\Sctipts_Boostrap\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\Scripts_Main\bootstrap.js" />
     <Content Include="Scripts\Scripts_Main\bootstrap.min.js" />
-    <Content Include="Content\Content_Boostrap\bootstrap-grid.css.map" />
-    <Content Include="Content\Content_Boostrap\bootstrap-grid.min.css.map" />
-    <Content Include="Content\Content_Boostrap\bootstrap-grid.rtl.css.map" />
-    <Content Include="Content\Content_Boostrap\bootstrap-grid.rtl.min.css.map" />
-    <Content Include="Content\Content_Boostrap\bootstrap-reboot.css.map" />
-    <Content Include="Content\Content_Boostrap\bootstrap-reboot.min.css.map" />
-    <Content Include="Content\Content_Boostrap\bootstrap-reboot.rtl.css.map" />
-    <Content Include="Content\Content_Boostrap\bootstrap-reboot.rtl.min.css.map" />
-    <Content Include="Content\Content_Boostrap\bootstrap-utilities.css.map" />
-    <Content Include="Content\Content_Boostrap\bootstrap-utilities.min.css.map" />
-    <Content Include="Content\Content_Boostrap\bootstrap-utilities.rtl.css.map" />
-    <Content Include="Content\Content_Boostrap\bootstrap-utilities.rtl.min.css.map" />
-    <Content Include="Content\Content_Boostrap\bootstrap.css.map" />
-    <Content Include="Content\Content_Boostrap\bootstrap.min.css.map" />
-    <Content Include="Content\Content_Boostrap\bootstrap.rtl.css.map" />
-    <Content Include="Content\Content_Boostrap\bootstrap.rtl.min.css.map" />
     <Content Include="Content\Images-Title\pro_1_size.jpg" />
     <None Include=".editorconfig" />
     <EntityDeploy Include="Models\webClothesModels.edmx">
@@ -424,30 +392,30 @@
     <Content Include="Areas\admin\Views\warehouses\Details.cshtml" />
     <Content Include="Areas\admin\Views\warehouses\Edit.cshtml" />
     <Content Include="Areas\admin\Views\warehouses\Index.cshtml" />
-    <Content Include="Scripts\bootstrap.min.js.map" />
-    <Content Include="Scripts\bootstrap.js.map" />
-    <Content Include="Scripts\bootstrap.esm.min.js.map" />
-    <Content Include="Scripts\bootstrap.esm.js.map" />
-    <Content Include="Scripts\bootstrap.bundle.min.js.map" />
-    <Content Include="Scripts\bootstrap.bundle.js.map" />
-    <Content Include="Content\bootstrap.rtl.min.css.map" />
-    <Content Include="Content\bootstrap.rtl.css.map" />
-    <Content Include="Content\bootstrap.min.css.map" />
-    <Content Include="Content\bootstrap.css.map" />
-    <Content Include="Content\bootstrap-utilities.rtl.min.css.map" />
-    <Content Include="Content\bootstrap-utilities.rtl.css.map" />
-    <Content Include="Content\bootstrap-utilities.min.css.map" />
-    <Content Include="Content\bootstrap-utilities.css.map" />
-    <Content Include="Content\bootstrap-reboot.rtl.min.css.map" />
-    <Content Include="Content\bootstrap-reboot.rtl.css.map" />
-    <Content Include="Content\bootstrap-reboot.min.css.map" />
-    <Content Include="Content\bootstrap-reboot.css.map" />
-    <Content Include="Content\bootstrap-grid.rtl.min.css.map" />
-    <Content Include="Content\bootstrap-grid.rtl.css.map" />
-    <Content Include="Content\bootstrap-grid.min.css.map" />
-    <Content Include="Content\bootstrap-grid.css.map" />
-    <Content Include="Scripts\jquery-3.6.1.slim.min.map" />
-    <Content Include="Scripts\jquery-3.6.1.min.map" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.min.js.map" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.js.map" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.esm.min.js.map" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.esm.js.map" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.bundle.min.js.map" />
+    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.bundle.js.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap.rtl.min.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap.rtl.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap.min.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-utilities.rtl.min.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-utilities.rtl.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-utilities.min.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-utilities.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-reboot.rtl.min.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-reboot.rtl.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-reboot.min.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-reboot.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-grid.rtl.min.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-grid.rtl.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-grid.min.css.map" />
+    <Content Include="Content\Content_Boostrap\bootstrap-grid.css.map" />
+    <Content Include="Scripts\Sctipts_Boostrap\jquery-3.6.1.slim.min.map" />
+    <Content Include="Scripts\Sctipts_Boostrap\jquery-3.6.1.min.map" />
     <None Include="Scripts\Scripts_Main\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\Scripts_Main\jquery-3.4.1.js" />
     <Content Include="Scripts\Scripts_Main\jquery-3.4.1.min.js" />
@@ -459,12 +427,6 @@
     <Content Include="Scripts\Scripts_Main\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\Scripts_Main\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\Scripts_Main\modernizr-2.8.3.js" />
-    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.bundle.js" />
-    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.bundle.min.js" />
-    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.esm.js" />
-    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.esm.min.js" />
-    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.js" />
-    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.min.js" />
     <Content Include="Scripts\web_clothes.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -473,12 +435,6 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.bundle.js.map" />
-    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.bundle.min.js.map" />
-    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.esm.js.map" />
-    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.esm.min.js.map" />
-    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.js.map" />
-    <Content Include="Scripts\Sctipts_Boostrap\bootstrap.min.js.map" />
     <Content Include="Views\Error.cshtml" />
     <Content Include="Views\Home\chinh_sach_bao_mat_thong_tin_view.cshtml" />
     <Content Include="Views\Home\chinh_sach_doi_tra_view.cshtml" />
@@ -486,13 +442,11 @@
     <Content Include="Views\Home\dieu_khoan_view.cshtml" />
     <Content Include="Views\Home\huong_dan_mua_hang_view.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\product_details_view.cshtml" />
     <Content Include="Views\Shared\chinh_sach_bao_mat_thong_tin.cshtml" />
     <Content Include="Views\Shared\chinh_sach_doi_tra.cshtml" />
     <Content Include="Views\Shared\chinh_sach_thanh_toan.cshtml" />
     <Content Include="Views\Shared\dieu_khoan.cshtml" />
     <Content Include="Views\Shared\huong_dan_mua_hang.cshtml" />
-    <Content Include="Views\Shared\product_details.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Shared\_ViewStart.cshtml" />
     <Content Include="Views\Web.config" />
